permgen 영역에 대한 내용 추가